# submodule-hook

./: CHANGELOG.md  Cargo.toml  README.md
src/: check_submodules.rs  config.rs  confirmation.rs  main.rs
