[package]
name = "submodule-hook"
version = "0.1.0"
edition = "2024"
description = "submodules check pre commit hook"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hook", "git", "commit", "submodule"]
categories = ["command-line-utilities"]
repository = "https://github.com/PicoJr/submodule-hook"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
dialoguer = "0.12.0"
env_logger = "0.11.8"
git2 = { version = "0.20.2" ,  features = ["vendored-libgit2", "vendored-openssl"]}
log = "0.4.29"

[dev-dependencies]
tempfile = "3.23.0"
